Minor design tweaks

--- a/index.html
+++ b/index.html
@@ -95,7 +95,6 @@ display: block;
 		<section id="about">
 			<div class="row">
 				<div class="padding dark-back col-sm-6 center-xs" id="profile">
-					<div id="profile-circle"></div>
 				</div>
 
 				<div class="padding dark-back col-sm-6">
@@ -153,8 +152,7 @@ display: block;
 
 					<p class="light"><span class="regular italic">About:</span><br />
 						<span class="regular">Linked</span> is an after-school Shopify Dev Discover program focused on teaching
-						children
-						the foundations of computational thinking and digital skills development. This video was created in order to
+						children the foundations of computational thinking and digital skills development. This video was created in order to
 						promote the program.
 					</p>
 				</div>
@@ -208,12 +206,9 @@ display: block;
 
 					<p class="light"><span class="regular italic">Synopsis:</span><br />
 						It's Christmas time, and ultra-popular high school superstar Daniel has it all. But after learning that
-						someone
-						has sabotaged his entire future, university admissions, and scholarships, he begins to hate the holiday
-						season,
-						lashing out at everyone around him for revenge. After a nasty fall outside, three ghosts attempt to revive
-						his
-						Christmas spirit...
+						someone has sabotaged his entire future, university admissions, and scholarships, he begins to hate the holiday
+						season, lashing out at everyone around him for revenge. After a nasty fall outside, three ghosts attempt to revive
+						his Christmas spirit...
 					</p>
 				</div>
 			</div>
@@ -241,8 +236,7 @@ display: block;
 
 					<p class="light"><span class="regular italic">About the show:</span><br />
 						<span class="regular">High School Happenings</span> is a monthly television programme on Rogers Television
-						that
-						features unique educational programs from a variety of high schools across Ottawa.
+						that features unique educational programs from a variety of high schools across Ottawa.
 					</p>
 				</div>
 			</div>
@@ -269,8 +263,7 @@ display: block;
 
 					<p class="light"><span class="regular italic">About:</span><br />
 						Shot using the Canon HV20 MiniDV camcorder at 50% zoom at PF24, on a rather rainy day, to the tune of "La
-						Vie en
-						Rose" performed by Louis Armstrong.
+						Vie en Rose" performed by Louis Armstrong.
 					</p>
 				</div>
 			</div>
@@ -295,8 +288,7 @@ display: block;
 
 					<p class="light"><span class="regular italic">About:</span><br />
 						Trying out 240fps slow-motion video capabilities of the iPhone X, while capturing the magical snowfall in
-						Ottawa.
-						Follow along for a trip from Shopify to Carleton U!
+						Ottawa. Follow along for a trip from Shopify to Carleton U!
 					</p>
 				</div>
 			</div>
@@ -321,8 +313,7 @@ display: block;
 
 					<p class="light"><span class="regular italic">About:</span><br />
 						Compilation of different clips shot during a trip to Poland in 2015. Heavily inspired by videos from
-						TheUwagaPies
-						on YouTube from around the same time. Shot on a Panasonic DMC-GX7 with numerous lenses.
+						TheUwagaPies on YouTube from around the same time. Shot on a Panasonic DMC-GX7 with numerous lenses.
 					</p>
 				</div>
 			</div>
@@ -347,8 +338,7 @@ display: block;
 
 					<p class="light"><span class="regular italic">About:</span><br />
 						A short timelapse from the 24th floor through a hotel window. Created using still images with long
-						exposures,
-						played in sequence at a higher frame rate.
+						exposures, played in sequence at a higher frame rate.
 					</p>
 				</div>
 			</div>
@@ -379,11 +369,9 @@ display: block;
 					<p class="bold">OTO-WA TAIKO</p>
 
 					<p>Oto-Wa Taiko is a Japanese drumming group in Ottawa, Ontario. This is a dynamic website, created using
-						ReactJS
-						and navigation based on react-router. The site also uses Firebase to manage content, and user accounts for
+						ReactJS and navigation based on react-router. The site also uses Firebase to manage content, and user accounts for
 						members of the group. The site features a friendly design which suits the desired aesthetic of the art form
-						and
-						brand.</p>
+						and brand.</p>
 
 					<p><a href="http://otowataiko.ca">otowataiko.ca</a></p>
 				</div>
@@ -401,12 +389,9 @@ display: block;
 					<p class="bold">SWL & CB HUMAN LIBRARY</p>
 
 					<p>This website was created for a "human library" event co-organized by two schools in Ottawa. The website
-						hosts
-						biographies of many human books for students to read. This gateway was originally static, but was later
-						converted
-						to a full Wordpress installation using custom loops and fields. The site can now be easily edited using
-						WYSIWYG
-						functionality.</p>
+						hosts biographies of many human books for students to read. This gateway was originally static, but was later
+						converted to a full Wordpress installation using custom loops and fields. The site can now be easily edited using
+						WYSIWYG functionality.</p>
 
 					<p><a href="http://swlcbhumanlibrary.ca">swlcbhumanlibrary.ca</a></p>
 				</div>
@@ -424,10 +409,8 @@ display: block;
 					<p class="bold">TEDxYOUTH@OGILVIE RD</p>
 
 					<p>This site was created for a student-run TEDx conference. Using a custom version of the Bootstrap
-						frameworking
-						system, the site offered easy to use and accessible content, while maintaining authentic TED branding. The
-						blog
-						portion of the site ran on Wordpress to allow for easy editing by the executives.</p>
+						frameworking system, the site offered easy to use and accessible content, while maintaining authentic TED branding. The
+						blog portion of the site ran on Wordpress to allow for easy editing by the executives.</p>
 
 					<p class="italic">This site is no longer active.</p>
 				</div>
@@ -444,11 +427,11 @@ display: block;
 					<h1 class="red-emphasis xl on-scroll">04</h1>
 					<p class="bold">COLONEL BY H.S. LIBRARY <span class="light italic">contributed</span></p>
 
-					<p>The Colonel By library website is used by students as a gateway to useful educational resources. This site
-						is
-						also based off of the Bootstrap framework, and offers a flexible layout solution to meet the needs of any
-						type of
-						content.</p>
+					<p>
+						The Colonel By library website is used by students as a gateway to useful educational resources. This site
+						is also based off of the Bootstrap framework, and offers a flexible layout solution to meet the needs of any
+						type of content.
+					</p>
 
 					<p><a href="http://colonelby.com/teachers/library/">colonelby.com/teachers/library</a></p>
 				</div>
@@ -467,8 +450,7 @@ display: block;
 
 					<p>This website runs on carefully hand-crafted HTML, CSS, and JS, using nothing but the FlexboxGrid CSS layout
 						framework. The original design saw numerous iterations over the past 7 years, and continues to be improved.
-						The
-						design was carefully thought out and planned, with original ideas and unique colours and typefaces.</p>
+						The design was carefully thought out and planned, with original ideas and unique colours and typefaces.</p>
 
 					<p><a href="http://romsicki.com">romsicki.com</a><br />
 						<span class="small">Source tree available on <a
@@ -501,21 +483,17 @@ display: block;
 					<aside>2D Physics Game</aside>
 
 					<p class="light">Impulse is a 2D physics game based on the popular iOS app, Flappy Bird, written in Swift 2.0.
-						I
-						was interested in trying my hand at making my own app and making it available on the Apple App Store. I
-						decided
-						to create a game based off one of the App Store’s best-selling games, called “Flappy Bird.” I wanted to give
-						the
-						original Flappy Bird concept a striking interface, user customizability, and settings that I would have
-						wanted to
-						see in the original app.</p>
+						I was interested in trying my hand at making my own app and making it available on the Apple App Store. I
+						decided to create a game based off one of the App Store’s best-selling games, called “Flappy Bird.” I wanted to give
+						the original Flappy Bird concept a striking interface, user customizability, and settings that I would have
+						wanted to see in the original app.</p>
 
 					<p class="small">Source tree available on <a href="https://github.com/lfroms/impulse">GitHub</a>.</p>
 				</div>
 			</div>
 		</section>
 
-		<section class="dark-back" id="app-dev">
+		<section class="dark-back" id="contact">
 			<header class="white italic">Contact</header>
 
 			<div class="row center-xs middle-xs">
@@ -539,6 +517,7 @@ display: block;
 				<a data-scroll href="#cine">Cine/Media Production</a>
 				<a data-scroll href="#front-end">Web Experience Design</a>
 				<a data-scroll href="#app-dev">Application Design</a>
+				<a data-scroll href="#contact">Contact</a>
 			</nav>
 		</div>
 
