Add additional information

--- a/index.html
+++ b/index.html
@@ -123,6 +123,12 @@ display: block;
 						<span class="green-emphasis">marvellous</span> front-end experiences for <b>any</b>
 						audience and purpose.
 					</p>
+
+					<p class="large light">
+						I design <span class="yellow-emphasis">sound &amp; lighting</span> for live performances,
+						and create <span class="red-emphasis">video productions</span> at various venues including
+						the National Arts Centre and corporate and academic locations.
+					</p>
 				</div>
 			</div>
 		</section>
