--- a/index.html
+++ b/index.html
@@ -125,9 +125,10 @@ display: block;
 					</p>
 
 					<p class="large light">
-						I design <span class="yellow-emphasis">sound &amp; lighting</span> for live performances,
-						and create <span class="red-emphasis">video productions</span> at various venues including
-						the National Arts Centre and corporate and academic locations.
+						I create <span class="yellow-emphasis">video productions</span> at various venues including
+						the National Arts Centre and corporate and academic locations.  Also, I design 
+						<span class="red-emphasis">sound &amp; lighting</span> for small-scale live performances
+						and events.
 					</p>
 				</div>
 			</div>
